# PrattCalc-Discord-Bot

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust-ci.yml
examples/: advanced_script.pc  complex_expressions.pc  control_flow.pc  end_keyword.pc  function_procedure_interaction.pc  functions_and_procedures.pc  mathematical_functions.pc  scopes_and_blocks.pc  simple_script.pc  variables_and_constants.pc
src/: lib.rs  logging.rs  main.rs  parser.rs  tests.rs  utils.rs
src/core/: ast_expression.rs  ast_statement.rs  error_types.rs  execution_state.rs  interpreter.rs  lexical_analyzer.rs  lib.rs  parser.rs  symbol_manager.rs
src/discord/: bot_handler.rs  error_handler.rs  lib.rs  models.rs
src/discord/commands/: calculator.rs  clear.rs  evaluate.rs  executor.rs  help.rs  mod.rs  statistics.rs  vars.rs
tests/: advanced_features_tests.rs  basic_features_tests.rs  comment_tests.rs  control_flow_tests.rs  language_features_tests.rs  logical_operations_tests.rs
